# worldoracle

./: .aider.conf.yml  .coderabbit.yaml  .editorconfig  .gitignore  .pre-commit-config.yaml  .windsurfrules  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODEX.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  action.yml  ai-catalog.json  codecov.yml  mkdocs.yml  openapi.yaml  pyproject.toml  server.json  smithery.yaml  smoke_test.py
.claude/commands/: domain.md  pr-prep.md  release.md  test.md
.continue/: config.json
.cursor/rules/: project.mdc
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release-drafter.yml  release.yml  stale.yml
assets/: demo.tape
docs/: api-reference.md  architecture.md  cli-reference.md  contributing.md  github-action.md  how-it-works.md  index.md  mcp.md  openai.md  quickstart.md
docs/case-studies/: enterprise-multi-source-factbase.md  gaming-npc-world-consistency.md
examples/: demo.py  live_game_event_tracker.py  multi_agent_factbase.py  rpg_npc_world.py
src/worldoracle/: __init__.py  api.py  cli.py  consistency.py  diff.py  mcp_server.py  predicate.py  report.py  store.py  temporal.py
tests/: conftest.py  test_api.py  test_cli_runner.py  test_consistency.py  test_detector.py  test_diff.py  test_mcp_server.py  test_predicate.py  test_repairer.py  test_report.py  test_store.py  test_temporal.py
tools/: openai-tools.json
