[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "worldoracle"
version = "0.1.1"
description = "NPC contradiction detector and belief repair for game worlds"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Sandeep Alluru", email = "onepuncchh@gmail.com" }]
keywords = ["gaming", "npc", "belief-revision", "contradiction", "agents", "mcp", "llmops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
api = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "mypy>=1.10",
    "pre-commit>=3.0",
    "fastapi>=0.110",
    "httpx>=0.27",
]

[project.scripts]
worldoracle     = "worldoracle.cli:main"
worldoracle-mcp = "worldoracle.mcp_server:run_server"

[project.urls]
Homepage      = "https://github.com/sandeep-alluru/worldoracle"
Repository    = "https://github.com/sandeep-alluru/worldoracle"
Documentation = "https://sandeep-alluru.github.io/worldoracle"
Changelog     = "https://github.com/sandeep-alluru/worldoracle/blob/main/CHANGELOG.md"
Issues        = "https://github.com/sandeep-alluru/worldoracle/issues"

# ── Hatch build ──────────────────────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/worldoracle"]

# ── Ruff ──────────────────────────────────────────────────────────────────────

[tool.ruff]
line-length    = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit
    "N",    # pep8 naming
    "SIM",  # flake8-simplify
    "RUF",  # ruff-native rules
    "PT",   # flake8-pytest-style
]
ignore = [
    "S101",  # assert used in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106", "SIM115"]
"examples/**" = ["S101", "T201"]

# ── Mypy ──────────────────────────────────────────────────────────────────────

[tool.mypy]
python_version         = "3.10"
strict                 = false
ignore_missing_imports = true
warn_return_any        = true
warn_unused_ignores      = true
warn_unused_configs      = true
disallow_any_generics    = true
check_untyped_defs       = true
disallow_untyped_defs  = true

# ── Pytest ────────────────────────────────────────────────────────────────────

[tool.pytest.ini_options]
testpaths  = ["tests"]
pythonpath = ["src"]
addopts    = "--cov=worldoracle --cov-report=term-missing --cov-report=xml"

# ── Coverage ──────────────────────────────────────────────────────────────────

[tool.coverage.run]
source   = ["worldoracle"]
branch   = true
omit     = ["*/tests/*", "*/examples/*"]

[tool.coverage.report]
fail_under   = 85
show_missing = true
